# datacleaner-env

./: .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  ai_helper.py  environment.py  models.py  state.py  tasks.py
env/data/: easy_raw.csv  easy_target.csv  hard_raw.csv  hard_target.csv  medium_raw.csv  medium_target.csv
optional_ui/: streamlit_app.py
server/: app.py  run.py
tests/: test_env.py  test_grader.py
